Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Fixed significant state mismatched data bugs.
    * Added API::IRC::ison for checking if a user is on a channel.
    * Werewolf: Fixed a bug in harlot staying home.
    * Werewolf: Various bug fixes.
    * Werewolf 1.06: Fixed an annoyance and added traitor transformation.
    * Commands now work with prefixes even in PM.
    * Ping: Determines end by numeric 315 instead of a 3-second timer now.
    * Werewolf: Fixed a GUARD issue and made it possible to VISIT yourself.
    * Possibly fixed a rare fatal error.
    * Werewolf: Rewrote WAIT to be more decent.
    * Werewolf: Wounded villagers are now excluded from winning villager count.
    * Werewolf: Dynamic lynch and no victim messages.
    * Werewolf 1.05: Added WAIT command.
    * Werewolf: Improved STATS to be smart.
    * Werewolf 1.04: Added village drunks and fixed other issues.
    * Werewolf: Fixed various annoyances. Also raised chance of gun hitting.
    * Werewolf: Fixed a nasty lynch nick exploit.
    * Fixed an issue in HELP.
    * Added a Ping module.
    * Moved Werewolf back to stable.

3.0 Alpha 10
===============================================================================
    * Werewolf moved to unstable/ for exclusion from alpha10.
    * Werewolf: Fixed a bug causing double lynches occasionally.
    * Werewolf: One bug fix and multiple bullets.
    * Werewolf: Fixed timeout bug.
    * Werewolf: Fixed various warnings.
    * Werewolf: Handful of bugs fixed, timeouts rewritten, wolf assignment
      rewritten. (see ROLES:Werewolf)
    * Werewolf: Fixed an annoyance in VOTES.
    * Werewolf: Fixed another round of bugs.
    * Werewolf: Fixed a grammatical error. Thanks TAD!
    * Werewolf: Fixed a bug that occasionally caused a person to get wolf
      twice in the same game.